tests/expectations/parser/functions/const_public_param_fail.out
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'const'
    --> test:3:24
     |
   3 |     function x(x: u32, const public y: i32) {
     |                        ^^^^^